# build/api/swagger.json
@@ -22,25 +22,7 @@
             "https"
         ],
         "paths": {
-            "/auth/signin": {
-                "post": {
-                    "tags": [
-                        "Auth"
-                    ],
-                    "produces": [
-                        "application/json"
-                    ],
-                    "responses": {
-                        "201": {
-                            "description": "",
-                            "schema": {
-                                "$ref": "#/definitions/ResponseAuthData"
-                            }
-                        }
-                    }
-                }
-            },
-            "/auth/login": {
+            "/auth": {
                 "post": {
                     "tags": [
                         "Auth"
